[package]
name = "best-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", default-features = false, features = ["toml"] }
env_logger = "0.10.0"
log = "0.4.17"
sdl2 = "0.35.2"
serde = { version = "1.0.157", features = ["derive"] }
